<resources>
    <string name="app_name">Layout Project</string>

    <string name="checkbox_4">CheckBox 4</string>
    <string name="checkbox_2">CheckBox 2</string>
    <string name="checkbox_1">CheckBox 1</string>
    <string name="radiobutton_1">RadioButton 1</string>
    <string name="checkbox_3">CheckBox 3</string>
    <string name="radiobutton_2">RadioButton 2</string>

    <string name="bishop_chess_piece_image">bishop chess piece image</string>
    <string name="little_green_guy">little green guy</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
</resources>
